[package]
name = "redis-task-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = {version = "1.28.2", features = ["full"]}
axum = {version = "0.6.18", features=["headers", "ws"]}
axum-extra = {version = "0.7.4"}
chrono = {version = "0.4.26", features = ["serde"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.100"

env_logger = "0.10.0"
dotenvy = "0.15.7"

redis = {version = "0.23.3", features = ["tokio-comp", "json"]}

base64 = "0.21.4"

uuid = {version = "1.3.1", features = ["v4"]}

lazy_static = "1.4.0"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"
